fix:align amount & symbol, reduce space below title & content

--- a/src/modules/dashboard/components/TokenCard/TokenCard.css
+++ b/src/modules/dashboard/components/TokenCard/TokenCard.css
@@ -59,6 +59,7 @@
   justify-content: center;
   margin-top: calc(headerFooterHeights / 2);
   font-size: var(--size-medium-l);
+  color: var(--dark);
 }
 
 .balanceNumeral {
